user component created

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
 <header>
+  <img src="assets/task-management-logo.png" alt="">
   <h1>My To Do list!</h1>
+  <p>This project is to demonstrate learned practises in Angualar</p>
 </header>
