--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,15 @@
 <app-header />
 <main>
   <ul id="users">
+    @for(user of users; track user.id) {
     <li>
-      <app-user [user]="users[0]" (select)="onSelectUser($event)" />
+      <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
-    <li>
-      <app-user [user]="users[1]" (select)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[2]" (select)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[3]" (select)="onSelectUser($event)" />
-    </li>
-    <li>
-      <app-user [user]="users[4]" (select)="onSelectUser($event)" />
-    </li>
+  }
   </ul>
+  @if(selectedUser){
   <app-tasks [name]="selectedUser.name"></app-tasks>
+} @else {
+  <p id="fallback">Select a user to see their task!</p>
+}
 </main>
